--- a/reports/reports_preventiva.xml
+++ b/reports/reports_preventiva.xml
@@ -14,5 +14,18 @@
             
             <field name="name">Relatório</field> 
     </record> 
+    <report 
+            id="report_cronograma_preventiva"
+            model="dgt_preventiva.cronograma"
+            string="Cronograma Preventiva"
+            report_type="qweb-pdf"
+            name="dgt_preventiva.report_cronograma_preventiva_template"
+            file="dgt_preventiva.report_cronograma_preventiva"
+            print_report_name = "('Cronograma ' + object.name)"
+        />
+   <record id="report_cronograma_preventiva" model="ir.actions.report">
+            
+            <field name="name">Cronograma</field> 
+    </record> 
    </data>
 </odoo>
