Fix bugs and new features - Assinatura no formulário de OS com registro de data de assinatura - Mostra data da assinatura digital do cliente, caso não tenha assinatura coloca espaço para datar no relatório - Mostra Manutenção preventiva no relatório no lugar de ordem de serviço, bem como o Mês de referência   pegando a data programada da preventiva. - Mudanças no layout do relatório.

--- a/reports/report_assinatura_template.xml
+++ b/reports/report_assinatura_template.xml
@@ -15,7 +15,20 @@
                     <tbody>
                         <tr>
                             <td>Data:_______/_________/__________</td>
-                            <td>Data:_______/_________/__________</td>
+                            
+                           
+                            
+                            <td>
+                           
+                            <span t-field="o.sign_client" />
+                            
+                            <t t-if="o.sign_client">
+                                Data: <span t-field="o.signature_client_date" /> 
+                            </t> 
+                            <t t-if="not o.sign_client">
+                                Data:_______/_________/__________
+                            </t>
+                            </td>
                         </tr>
                         <tr>
                             <td width="50%">
