--- a/reports/reports.xml
+++ b/reports/reports.xml
@@ -10,9 +10,21 @@
             file="dgt_preventiva.report_preventiva"
             print_report_name = "('Relatório ' + object.name)"
         />
+     <report 
+            id="report_checklist"
+            model="dgt_os.os"
+            string="Check-List"
+            report_type="qweb-pdf"
+            name="dgt_preventiva.report_checklist_template"
+            file="dgt_preventiva.report_checklist"
+            print_report_name = "('Checklist ' + object.name)"
+        />
    <record id="report_preventiva" model="ir.actions.report">
             
             <field name="name">Relatório</field> 
     </record> 
+    <record id="report_checklist" model="ir.actions.report">
+            <field name="name">Checklist</field>
+    </record>
    </data>
 </odoo>
