--- a/reports/reports_preventiva.xml
+++ b/reports/reports_preventiva.xml
@@ -23,9 +23,22 @@
             file="dgt_preventiva.report_cronograma_preventiva"
             print_report_name = "('Cronograma ' + object.name)"
         />
+        <report 
+            id="report_checklist"
+            model="dgt_os.os"
+            string="Check-List"
+            report_type="qweb-pdf"
+            name="dgt_preventiva.report_checklist_template"
+            file="dgt_preventiva.report_checklist"
+            print_report_name = "('Checklist ' + object.name)"
+        />
    <record id="report_cronograma_preventiva" model="ir.actions.report">
             
             <field name="name">Cronograma</field> 
     </record> 
+      <record id="report_checklist" model="ir.actions.report">
+
+            <field name="name">Checklist</field>
+    </record>
    </data>
 </odoo>
