--- a/views/dgt_os_form_view.xml
+++ b/views/dgt_os_form_view.xml
@@ -34,7 +34,7 @@
                             </notebook>
                         </form>
                         <tree string="Pecas" decoration-success="aplicada==True" decoration-danger="aplicada==False" editable="bottom" >
-                            <field name="sequence" widget="handle"/>
+                        <!--    <field name="sequence" widget="handle"/> -->
                             <field name="aplicada"/>
                             <field name="product_id"/>
                             <field name='name'/> 
