--- a/reports/report_checklist_template.xml
+++ b/reports/report_checklist_template.xml
@@ -16,48 +16,12 @@
 					<!-- <img class="col-6 float-right" width="100" height="100" t-att-src="'/report/barcode/QR/%s%s' % ('http://server.diagnostica-ma.com.br:8069/report/pdf/dgt_os.report_ordem_servico/',o.id)"/> -->
 				<!--  </div> -->
 				</div>
-				<div class="row mt32 mb32">
-					<div class="col-6">
-						<h5>Dados do Cliente:</h5>
-					
-						<!-- <div class="col-9"> -->
-							
-						<b><span t-field="o.cliente_id.name"/></b> <br/> CNPJ/CPF:<span t-field="o.cliente_id.cnpj_cpf"/><br/>
-						<span t-field="o.cliente_id.street"/>, <span t-field="o.cliente_id.number"/>, 
-						<span t-field="o.cliente_id.district"/>
-						<span t-field="o.cliente_id.street2"/>-<br/> 
-						<span t-field="o.cliente_id.city_id.name"/>
-						<span t-field="o.cliente_id.state_id.name"/>-
-						<span t-field="o.cliente_id.country_id.name"/>-
-						<span t-field="o.cliente_id.zip"/><br/>
-						<!-- </div> -->
-						<!-- <div class="col-3"> -->
-						<strong>Contato:</strong><br/>
-						<span t-field="o.cliente_id.phone"/><br/> 
-						<span t-field="o.cliente_id.mobile"/><br/>
-						<span t-field="o.cliente_id.email"/>
-						<!-- </div> -->														
+				<div class="row">
+					<div class="col-12 mt-1">
+						<t t-call="dgt_preventiva.report_cliente_equipment_template"/>
 					</div>
-					<div class="col-6">
-					
-						<h5>Dados do Equipamento:</h5>								
-						<b><span t-field="o.equipment_id.name"/></b>
-							<b>NS:</b><span t-field="o.equipment_id.serial_number"/>
-						<t t-if="o.equipment_id.model">
-							<b>Modelo:</b><span t-if="o.equipment_id.model" t-field="o.equipment_id.model"/>	
-						</t>
-						<t t-if="o.equipment_id.partner_id.name">
-							<b>Marca/Fornecedor:</b> <span t-if="o.equipment_id.partner_id.name" t-field="o.equipment_id.partner_id.name"/>	
-						</t>
-						<br/>
-						<t t-if="o.equipment_location">
-							<b>Setor: </b><span t-if="o.equipment_location" t-field="o.equipment_location"/><br/>	
-						</t>
-						
-						<strong>Status:</strong><br/>
-						<span t-field="o.equipment_id.situation_id"/>		
-					</div>
-				</div>	
+				</div>
+				
 				<t t-if="o.origin">
 				<div class="row ">		
 				
