--- a/reports/report_checklist_template.xml
+++ b/reports/report_checklist_template.xml
@@ -11,6 +11,11 @@
 					<div class="col-6">
 						<h2>Ordem de Serviço : <span t-field="o.name"/></h2>
 					</div>
+					<div class="col-6">
+							<h2>Mês Referência: 
+							<t t-esc="o.date_scheduled.strftime('%m/%Y')"></t></h2>
+							
+					</div>
 				 <!-- <div  > -->
 					<!-- <img width="100px" height="100px" t-att-src="'/report/barcode/QR/%s' % 'My text in qr code'"/> -->
 					<!-- <img class="col-6 float-right" width="100" height="100" t-att-src="'/report/barcode/QR/%s%s' % ('http://server.diagnostica-ma.com.br:8069/report/pdf/dgt_os.report_ordem_servico/',o.id)"/> -->
