--- a/reports/report_checklist_template.xml
+++ b/reports/report_checklist_template.xml
@@ -125,10 +125,11 @@
 											</tr>
 										</t>
 										<tr>
+											<td >
+												xxxxxxx
+											</td>
 											<td>
 												Hora de início:
-											</td>
-											<td >
 											</td>
 											<td>
 												
@@ -141,10 +142,11 @@
 											</td>
 										</tr>
 										<tr>
+											<td >
+												xxxxxxx
+											</td>
 											<td>
 												Hora de término:
-											</td>
-											<td >
 											</td>
 											<td>
 												
