Retirado as observações no relatório de  checklist que estavam aparecendo

--- a/reports/report_checklist_template.xml
+++ b/reports/report_checklist_template.xml
@@ -120,7 +120,7 @@
 													</t>
 												</td>
 												<td>
-													<span t-field="line.observations" />
+												<!--	<span t-field="line.observations" />-->
 												</td>
 											</tr>
 										</t>
