--- a/views/dgt_os_form_view.xml
+++ b/views/dgt_os_form_view.xml
@@ -37,11 +37,11 @@
                         <!--    <field name="sequence" widget="handle"/> -->
                             <field name="aplicada"/>
                             <field name="product_id"/>
-                            <field name='name'/> 
+                          <!--   <field name='name'/> -->
                             <field name="lot_id" domain="[('product_id', '=', product_id)]" context="{'default_product_id': product_id}" groups="stock.group_production_lot"/>
                             <field name="qty_available" string="Qtd Disp."/>
-                            <field name="qty_contrato"/>
-                            <field name="peca_autorizada" readonly="True" />
+                         <!--   <field name="qty_contrato"/> -->
+                          <!--   <field name="peca_autorizada" readonly="True" /> -->
                             <field name="product_uom_qty" string="Qtd Ped"/>
                             <field name="product_uom" string="Unit of Measure" groups="product.group_uom"/>
                             
@@ -84,4 +84,3 @@
                                 
     </data>
 </odoo>                    
-                        
